[gd_scene load_steps=10 format=3 uid="uid://6ec3a7mx85f"]

[ext_resource type="Script" uid="uid://bb4edfqhveu5l" path="res://scripts/game_manager.gd" id="1_lbhrr"]
[ext_resource type="PackedScene" uid="uid://d00adkqm2jd8h" path="res://scenes/enemies.tscn" id="2_lbhrr"]
[ext_resource type="Texture2D" uid="uid://dqjujfgfpg48d" path="res://assets/sprites/world_tileset.png" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://ckhh5luc6h5re" path="res://scenes/wave.tscn" id="2_yqjtg"]

[sub_resource type="Curve2D" id="Curve2D_iywne"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 160, -72, 0, 0, 0, 0, 208, -72, 0, 0, 0, 0, 208, 104, 0, 0, 0, 0, 160, 104, 0, 0, 0, 0, 160, -72)
}
point_count = 5

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lbhrr"]
texture = ExtResource("2_lnu2h")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
0:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
0:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
0:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_iywne"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lbhrr")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yqjtg"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lnu2h"]
normal = Vector2(0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")
enemy_scenes = Array[PackedScene]([ExtResource("2_lbhrr")])

[node name="Spawn" type="Node" parent="."]

[node name="EnemyTimer" type="Timer" parent="Spawn"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="Spawn"]

[node name="StartTimer" type="Timer" parent="Spawn"]
wait_time = 2.0
one_shot = true

[node name="EnemyPath" type="Path2D" parent="Spawn"]
curve = SubResource("Curve2D_iywne")

[node name="SpawnLocation" type="PathFollow2D" parent="Spawn/EnemyPath"]
position = Vector2(160, -72)

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="wave" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(-149, 87)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_iywne")
format = 2

[node name="ButtomLimit" type="StaticBody2D" parent="."]

[node name="Buttomlimit" type="CollisionShape2D" parent="ButtomLimit"]
position = Vector2(-1, 111)
shape = SubResource("WorldBoundaryShape2D_yqjtg")

[node name="UpperLimit" type="StaticBody2D" parent="."]

[node name="Upperlimit" type="CollisionShape2D" parent="UpperLimit"]
position = Vector2(0, -134)
shape = SubResource("WorldBoundaryShape2D_lnu2h")

[connection signal="timeout" from="Spawn/EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="Spawn/ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="Spawn/StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="wave" to="." method="game_over"]
